# Greeks-Driven-Hedging-Simulation-Engine

./: .gitignore  CMakeLists.txt  Readme.md
docs/: Architecture.md  Pricing_Model_Notes.md  hedging_examples.md  performance_results.md
include/core/: MathUtils.hpp  Time.hpp  Types.hpp
include/execution/: ExecutionEngine.hpp  Order.hpp  TransactionCostModel.hpp
include/greeks/: GreeksCalculator.hpp
include/hedging/: DeltaHedger.hpp  HedgingStrategy.hpp  ThresholdHedging.hpp
include/market/: MarketDataFeed.hpp  PricePath.hpp  UnderlyingSimulator.hpp
include/mm/: InventoryManager.hpp  MarketMaker.hpp  QuoteGenerator.hpp
include/pricing/: BinomialTree.hpp  BlackScholes.hpp  OptionSpecification.hpp
include/sim/: SimulationConfig.hpp  Simulator.hpp
include/util/: CSVWriter.hpp  Logger.hpp  Random.hpp
scripts/: analyze_results.ipynb  generate_price_paths.py  run_simulation.sh
src/: main.cpp
src/core/: MathUtils.cpp  Time.cpp  Types.cpp
src/execution/: ExecutionEngine.cpp  Order.cpp  TransactionCostModel.cpp
src/greeks/: GreeksCalculator.cpp
src/hedging/: DeltaHedger.cpp  HedgingStrategy.cpp  ThresholdHedging.cpp
src/market/: MarketDataFeed.cpp  PricePath.cpp  UnderlyingSimulator.cpp
src/mm/: InventoryManager.cpp  MarketMaker.cpp  QuoteGenerator.cpp
src/pricing/: BinomialTree.cpp  BlackScholes.cpp  OptionSpecification.cpp
src/sim/: SimulationConfig.cpp  Simulator.cpp
src/util/: CSVWriter.cpp  Logger.cpp  Random.cpp
tests/: CMakeLists.txt  test_binomial_tree.cpp  test_delta_hedger.cpp  test_execution.cpp  test_greeks.cpp  test_hedging_strategy.cpp  test_mass_pricer.cpp  test_simulator.cpp  test_stress_simulator.cpp
tools/: stress_run.cpp
